ghc (7.6.3-4) UNRELEASED; urgency=low

  * Enable verbose build output (see
    http://lists.debian.org/debian-devel/2013/06/msg00539.html).

 -- Colin Watson <cjwatson@debian.org>  Wed, 19 Jun 2013 11:19:58 +0100

ghc (7.6.3-3) unstable; urgency=low

  * Add patches/Handle-sign-bit-when-generating-veneer-for-ARM-Thumb.patch,
    patch by Colin Watson
  * Disable GHCi on arm, as it is severly borken (for more information see
    http://hackage.haskell.org/trac/ghc/ticket/7794)
  * Do not create system-wide documentation index if /usr/share/doc is
    missing. (Closes: #709911)
  * Create a symlink from prof_scc.png to prof_scc (Closes: #664043)

 -- Joachim Breitner <nomeata@debian.org>  Wed, 05 Jun 2013 20:57:49 +0200

ghc (7.6.3-2) unstable; urgency=low

  * Enable compat level 9
  * Remove transitional ghc6-* packages

 -- Joachim Breitner <nomeata@debian.org>  Fri, 24 May 2013 11:12:19 +0200

ghc (7.6.3-1) experimental; urgency=low

  * New upstream release

 -- Joachim Breitner <nomeata@debian.org>  Sun, 21 Apr 2013 19:12:24 +0200

ghc (7.6.2-1) experimental; urgency=low

  * New upstream release

 -- Joachim Breitner <nomeata@debian.org>  Tue, 29 Jan 2013 21:16:52 +0100

ghc (7.6.1.20121207-2) experimental; urgency=low

  * Typo in ghc-haddock’s Provides, thanks to David Fox for noticing.

 -- Joachim Breitner <nomeata@debian.org>  Thu, 13 Dec 2012 18:33:48 +0100

ghc (7.6.1.20121207-1) experimental; urgency=low

  * New upstream release (aka 7.6.1-rc).
    + Closes: #677096 (huge number of wakeups)
  * Remove debian/patches/armhf_llvm_abi, applied upstream, thanks to Shawn
    Landden for noticing (Closes: #695739)
  * Hardcode in debian/rules that haddock supportin interface version 22 also
    supports interface version 21.

 -- Joachim Breitner <nomeata@debian.org>  Wed, 12 Dec 2012 12:32:48 +0100

ghc (7.6.1-3) experimental; urgency=low

  * Bump standards version, no change
  * Change VCS fields back to regular repo