@@ -4,7 +4,6 @@ Priority: extra
 Maintainer: Debian Haskell Group <pkg-haskell-maintainers@lists.alioth.debian.org>
 Uploaders: Joachim Breitner <nomeata@debian.org>,
  Erik de Castro Lopo <erikd@mega-nerd.com>
-DM-Upload-Allowed: yes
 Standards-Version: 3.9.4
 Build-Depends:
   debhelper (>= 9),
@@ -13,15 +12,16 @@ Build-Depends:
   ghc,
   grep-dctrl,
   dh-autoreconf,
-  gcc (>= 4:4.2),
-  llvm-3.0 [armel armhf],
+  gcc,
+  llvm [armel armhf],
   libffi-dev,
   pkg-config,
   xsltproc,
   docbook-xsl,
   docbook-xml,
-  binutils (>= 2.19.51.20090508) [arm armel],
-  libncurses5-dev
+  binutils [armel armhf],
+  libncurses5-dev,
+  dpkg-dev (>= 1.16.1.1)
 Build-Depends-Indep:
   hscolour,
   fop
@@ -33,12 +33,12 @@ Vcs-Browser: http://darcs.debian.org/cgi-bin/darcsweb.cgi?r=pkg-haskell/ghc
 
 Package: ghc
 Architecture: any
-Depends: gcc (>= 4:4.2), llvm-3.0 [armel armhf], libgmp-dev, libffi-dev, libbsd-dev, libc6-dev, ${shlibs:Depends}, ${misc:Depends}
+Depends: gcc, llvm [armel armhf], libgmp-dev, libffi-dev, libbsd-dev, libc6-dev, ${shlibs:Depends}, ${misc:Depends}
 Provides: haskell-compiler, ${provided-devs}, ${haskell:Provides}, ${ghci}
 Replaces: ghc6 (<< 7)
 Conflicts: ghc6 (<< 7), ${provided-devs}
 Breaks: cabal-install (<< 0.8.0), haskell-devscripts (<< 0.8.13), ghc-doc (<= 6.12.1-8)
-Suggests: perl, ghc-prof, ghc-doc, haskell-doc, llvm-3.0
+Suggests: perl, ghc-prof, ghc-doc, haskell-doc, llvm
 Description: The Glasgow Haskell Compilation system
  The Glorious Glasgow Haskell Compilation system (GHC) is a compiler for
  Haskell.
