@@ -8,6 +8,11 @@
 # Uncomment this to turn on verbose mode.
 #export DH_VERBOSE=1
 
+# Set default flags with dpkg-buildflags
+# This might also close #712228
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/buildflags.mk
 
 # Set a dummy HOME variable upon build. Some build daemons do not set HOME, but
 # ghc-cabal expects it to be available.
@@ -103,8 +108,8 @@ endif
 	./configure $(confflags) --prefix=/usr \
 		$(EXTRA_CONFIGURE_FLAGS) \
 		--with-ld=ld.bfd \
-		--with-llc=llc-3.0 \
-		--with-opt=opt-3.0
+		--with-llc=llc \
+		--with-opt=opt
 
 	touch $@
 
