@@ -1,7 +1,15 @@
 ghc (7.6.3-4) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Enable verbose build output (see
     http://lists.debian.org/debian-devel/2013/06/msg00539.html).
+
+  [ Gianfranco Costamagna ]
+
+  * Switch to llvm (Closes: #711948)
+  * removed deprecated DM-Upload-Allowed
+  * removed some version checks, higher versions are already in oldstable.
+  * Added dpkg-buildflags as build-dep, fixing lintian warning.
 
  -- Colin Watson <cjwatson@debian.org>  Wed, 19 Jun 2013 11:19:58 +0100
 
